# cairo

./: CMakeLists.txt  ChangeLog.pre-1.0  ChangeLog.pre-1.10  NEWS  README  and_cairo.vcxproj  and_cairo.vcxproj.filters  cairo.cbp  cairo.def  cairo.sln  cairo.vcxproj  cairo.vcxproj.filters  cairoint.c  config.h  configure  configure.ac  deployment.rc  nord_cairo.vcxproj  nord_cairo.vcxproj.filters
boilerplate/: cairo-boilerplate-beos.cpp  cairo-boilerplate-cogl.c  cairo-boilerplate-constructors.c  cairo-boilerplate-directfb.c  cairo-boilerplate-drm.c  cairo-boilerplate-egl.c  cairo-boilerplate-getopt.c  cairo-boilerplate-glx.c  cairo-boilerplate-pdf.c  cairo-boilerplate-private.h  cairo-boilerplate-ps.c  cairo-boilerplate-qt.cpp  cairo-boilerplate-quartz.c  cairo-boilerplate-script.c  cairo-boilerplate-svg.c  cairo-boilerplate-system.c  cairo-boilerplate-system.h  cairo-boilerplate-test-surfaces.c  cairo-boilerplate-vg.c  cairo-boilerplate-wgl.c  cairo-boilerplate-win32-printing.c  cairo-boilerplate-win32.c  cairo-boilerplate-xcb.c  cairo-boilerplate-xlib.c  cairo-boilerplate.c  cairo-boilerplate.h
include/cairo/: cairo-damage-private.h  cairo-ft.h  cairo-gl-gradient-private.h  cairo-gl-private.h  cairo-image-surface-private.h  cairo-pixman-private.h  cairo-region-private.h  cairo-wideint-type-private.h  cairo-xcb-private.h  cairo-xlib-private.h  cairoint.h
perf/: cairo-analyse-trace.c  cairo-perf-chart.c  cairo-perf-compare-backends.c  cairo-perf-diff-files.c  cairo-perf-graph-files.c  cairo-perf-graph-widget.c  cairo-perf-graph.h  cairo-perf-micro.c  cairo-perf-print.c  cairo-perf-report.c  cairo-perf-trace.c  cairo-perf.c  cairo-perf.h  cairo-stats.c  cairo-stats.h
perf/micro/: a1-curve.c  a1-line.c  box-outline.c  cairo-perf-cover.c  composite-checker.c  curve.c  disjoint.c  dragon.c  fill-clip.c  fill.c  glyphs.c  hash-table.c  hatching.c  intersections.c  line.c  long-dashed-lines.c  long-lines.c  many-curves.c  many-fills.c  many-strokes.c  mask.c  mosaic.c  paint-with-alpha.c  paint.c  pattern_create_radial.c  pixel.c  pythagoras-tree.c  rectangles.c  rounded-rectangles.c  sierpinski.c  spiral.c  stroke.c  subimage_copy.c  tessellate.c  text.c  tiger.c  twin.c  unaligned-clip.c  wave.c  wide-fills.c  (+3 more)
src/: cairo-analysis-surface.c  cairo-arc.c  cairo-array.c  cairo-atomic.c  cairo-base64-stream.c  cairo-base85-stream.c  cairo-bentley-ottmann-rectangular.c  cairo-bentley-ottmann-rectilinear.c  cairo-bentley-ottmann.c  cairo-beos-surface.cpp  cairo-botor-scan-converter.c  cairo-boxes-intersect.c  cairo-boxes.c  cairo-cache.c  cairo-cff-subset.c  cairo-clip-boxes.c  cairo-clip-polygon.c  cairo-clip-region.c  cairo-clip-surface.c  cairo-clip-tor-scan-converter.c  cairo-clip.c  cairo-cogl-context.c  cairo-cogl-gradient.c  cairo-cogl-surface.c  cairo-cogl-utils.c  cairo-color.c  cairo-composite-rectangles.c  cairo-compositor.c  cairo-contour.c  cairo-damage.c  cairo-debug.c  cairo-default-context.c  cairo-deflate-stream.c  cairo-device.c  cairo-directfb-surface.c  cairo-egl-context.c  cairo-error.c  cairo-fallback-compositor.c  cairo-fixed.c  cairo-font-face-twin-data.c  (+139 more)
src/drm/: cairo-drm-bo.c  cairo-drm-gallium-surface.c  cairo-drm-i915-glyphs.c  cairo-drm-i915-private.h  cairo-drm-i915-shader.c  cairo-drm-i915-spans.c  cairo-drm-i915-surface.c  cairo-drm-i965-glyphs.c  cairo-drm-i965-private.h  cairo-drm-i965-shader.c  cairo-drm-i965-spans.c  cairo-drm-i965-surface.c  cairo-drm-intel-brw-eu-emit.c  cairo-drm-intel-brw-eu-util.c  cairo-drm-intel-brw-eu.c  cairo-drm-intel-brw-eu.h  cairo-drm-intel-brw-structs.h  cairo-drm-intel-command-private.h  cairo-drm-intel-debug.c  cairo-drm-intel-ioctl-private.h  cairo-drm-intel-private.h  cairo-drm-intel-surface.c  cairo-drm-intel.c  cairo-drm-private.h  cairo-drm-radeon-private.h  cairo-drm-radeon-surface.c  cairo-drm-radeon.c  cairo-drm-surface.c  cairo-drm.c
src/skia/: cairo-skia-context.cpp  cairo-skia-private.h  cairo-skia-surface.cpp
src/win32/: cairo-win32-debug.c  cairo-win32-device.c  cairo-win32-display-surface.c  cairo-win32-font.c  cairo-win32-gdi-compositor.c  cairo-win32-printing-surface.c  cairo-win32-private.h  cairo-win32-surface.c  cairo-win32-system.c
util/cairo-gobject/: cairo-gobject-enums.c  cairo-gobject-structs.c
util/cairo-missing/: cairo-missing.h  getline.c  strndup.c
util/cairo-script/: cairo-script-file.c  cairo-script-hash.c  cairo-script-interpreter.c  cairo-script-objects.c  cairo-script-operators.c  cairo-script-private.h  cairo-script-scanner.c  cairo-script-stack.c  csi-bind.c  csi-exec.c  csi-replay.c  csi-trace.c
